--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <title>My Portofolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 
     <!-- Link Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,36 +24,38 @@
   <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-body-transparant mt-4">
+    <div class="container-fluid position-fixed" id="nav">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active me-3" aria-current="page" href="hero">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-3" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-3" href="#skill">Skill</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-3" href="#sertifikat">Sertifikat</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-3" href="#portofolio">Portofolio</a>
-                </li>
-              </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-body-transparant py-3">
+          <div class="row justify-content-center">
+            <div class="col-8">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active me-3" aria-current="page" href="#hero">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-3" href="#about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-3" href="#skill">Skill</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-3" href="#sertifikat">Sertifikat</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-3" href="#portofolio">Portofolio</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
+        </nav>
       </div>
-    </nav>
+    </div>
 
     <!-- End Navbar -->
 
@@ -57,8 +63,8 @@
 
     <section id="hero">
       <div class="container">
-        <div class="row">
-          <div class="col-5 offset-1 my-auto">
+        <div class="row position-relative">
+          <div class="col-lg-5 col-md-6 offset-lg-1 my-auto order-1 text-center text-lg-start">
             <h2>Hallo</h2>
             <h1 class="fw-bold">I'am Heka</h1>
             <p>
@@ -101,8 +107,8 @@
               <a href="#" class="fw-bold text-decoration-none"><span class="color-acsent">Download</span> Curriculum Vitae</a>
             </div>
           </div>
-          <div class="col-5">
-            <img src="img/heka.png" width="80%" class="float-end" alt="" />
+          <div class="col-lg-5 col-md-6 order-md-2">
+            <img src="img/heka.png" width="80%" class="float-lg-end mx-auto display-block" alt="" />
           </div>
         </div>
       </div>
@@ -119,7 +125,7 @@
             <h1 class="text-center fw-bold">About</h1>
             <hr />
           </div>
-          <div class="col-10 mt-3">
+          <div class="col-lg-10 col-md-12 mt-3">
             <p class="text-center color-acsent">"Teknologi hanyalah alat, positif dan negative tergantung siapa yang menggunakannya"</p>
             <p class="text-center">Saya adalah seorang mahasiswa prodi Sistem Informasi yang sedang berkuliah di Universitas Ma Chung. Ini adalah kesempatan besar saya untuk belajar, akan saya usahakan sampai menjadi orang yang sukses.</p>
           </div>
@@ -139,7 +145,7 @@
               <h1 class="fw-bold text-center">Skill</h1>
               <hr />
             </div>
-            <div class="col-10 text-center mt-3">
+            <div class="col-lg-10 col-md-12 text-center mt-3">
               <img src="img/bootstrap.png" alt="" />
               <img src="img/html-5.png" alt="" />
               <img src="img/social.png" alt="" />
@@ -147,10 +153,11 @@
             </div>
           </div>
           <div class="row justify-content-center skill-content">
-            <div class="col-3">
+            <div class="col-lg-3 col-md-4 col-sm-10">
               <div class="card p-4">
-                <div class="row">
-                  <div class="col">
+                <!-- Grid bersarang -->
+                <div class="row text-center text-sm-start">
+                  <div class="col-sm-12">
                     <svg xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 14 14">
                       <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M13.5 10.5v-8A.5.5 0 0 0 13 2H1c-.265 0-.5.235-.5.5v8c0 .265.235.5.5.5h12c.265 0 .5-.235.5-.5M6 11l-1 2.5M8 11l1 2.5m-5 0h6" />
@@ -159,16 +166,16 @@
                     </svg>
                   </div>
                   <div class="col pt-3">
-                    <h3 class="text-star fw-bold">Front End Developer</h3>
+                    <h3 class="text-sm-start fw-bold text-center">Front End Developer</h3>
                     <p class="text-start">Ini adalah skill yang paling aku kuasai dan sering aku gunakan!</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-md-4 col-sm-10">
               <div class="card p-4">
-                <div class="row">
-                  <div class="col">
+                <div class="row text-center text-sm-start">
+                  <div class="col-sm-12">
                     <svg xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 14 14">
                       <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M13.5 10.5v-8A.5.5 0 0 0 13 2H1c-.265 0-.5.235-.5.5v8c0 .265.235.5.5.5h12c.265 0 .5-.235.5-.5M6 11l-1 2.5M8 11l1 2.5m-5 0h6" />
@@ -177,16 +184,16 @@
                     </svg>
                   </div>
                   <div class="col pt-3">
-                    <h3 class="text-star fw-bold">Back End Developer</h3>
+                    <h3 class="text-sm-start fw-bold text-center">Back End Developer</h3>
                     <p class="text-start">Aku sangat lemah dibagian ini, hanya sebagian saja yang aku faham.</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-md-4 col-sm-10">
               <div class="card p-4">
-                <div class="row">
-                  <div class="col">
+                <div class="row text-center text-sm-start">
+                  <div class="col-sm-12">
                     <svg xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 14 14">
                       <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M13.5 10.5v-8A.5.5 0 0 0 13 2H1c-.265 0-.5.235-.5.5v8c0 .265.235.5.5.5h12c.265 0 .5-.235.5-.5M6 11l-1 2.5M8 11l1 2.5m-5 0h6" />
@@ -195,7 +202,7 @@
                     </svg>
                   </div>
                   <div class="col pt-3">
-                    <h3 class="text-star fw-bold">Mobile Developer</h3>
+                    <h3 class="text-sm-start fw-bold text-center">Mobile Developer</h3>
                     <p class="text-start">Aku sudah install flutter tapi tidak pernah kujalankan bahkan sampai saat ini.</p>
                   </div>
                 </div>
@@ -219,8 +226,8 @@
               <hr />
             </div>
           </div>
-          <div class="row">
-            <div class="col-12 text-center pt-3">
+          <div class="row justify-content-center">
+            <div class="col-lg-10 col-md-12 text-center pt-3">
               <img src="img/fake_certificate.png" alt="" />
               <img src="img/fake_certificate.png" alt="" />
               <img src="img/fake_certificate.png" alt="" />
@@ -244,7 +251,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-10 d-flex pt-5">
+          <div class="col-lg-10 col-md-12 d-flex pt-5">
             <div class="card border-3 m-1">
               <img src="img/fake_certificate.png" alt="" />
             </div>
@@ -308,5 +315,8 @@
     <!-- End Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
+    <!-- My Script -->
+    <script src="js/script.js"></script>
   </body>
 </html>
